--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "dotenv": "^17.2.0",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.7.1",
+    "react-router-dom": "^6.30.1",
+    "reactive-button": "^1.3.15",
     "router-dom": "^3.0.3",
     "web-vitals": "^2.1.4"
   },
