--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^28.0.6",
     "@vitejs/plugin-react": "^5.0.0",
     "vite": "^7.0.6"
   }
