--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 VITE_NEWS_API_KEY=18b273289a5446f98d81f281c526a7be
 VITE_API_BASE_URL=http://localhost:5555/api
+VITE_BACKEND_URL=https://quarky.onrender.com
+
 
